# openbiv-workforce

./: .env.example  README.md  pyproject.toml
src/openbiv_workforce/: crew.py  main.py
src/openbiv_workforce/config/: agents.yaml  tasks.yaml
